# clayseal-identity

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  production-report.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml
agentauth/: biscuit_scope.py  workload_keys.py
agentauth/backend/: __init__.py  audit.py  capabilities.py  cimd.py  config.py  db.py  deps.py  identity.py  main.py  models.py  observability.py  production.py  rate_limit.py  retention.py  schemas.py  secret_encryption.py
agentauth/backend/routers/: federation.py  identity.py
agentauth/identity/: __init__.py  _capabilities.py  _devattest.py  cli.py  client.py  profile.py  session.py  usability.py  verifier.py
agentauth/identity/adapters/: __init__.py  azure.py  base.py  gcp.py  oidc.py  registry.py  spiffe.py  static.py
agentauth/identity/integrations/: __init__.py  fastapi.py  langchain.py
backend/tests/: attest.py  conftest.py  test_admin_gate.py  test_api_keys.py  test_attestation.py  test_attestation_size.py  test_biscuit_keys.py  test_caches.py  test_capabilities.py  test_capability_constraints.py  test_cimd.py  test_cloud_attestation_e2e.py  test_examples.py  test_federation.py  test_identity.py  test_migrations.py  test_mtls.py  test_node_attestors.py  test_observability.py  test_one_time_guarantees.py  test_prod_config.py  test_rate_limit.py  test_registration_lint.py  test_retention_pagination.py  test_secret_encryption.py  test_signing_keys.py  test_trusted_hosts.py  test_wit_jwt.py  test_x509_svid.py
bad-token-zoo/: README.md  cases.json
clayseal/: _core.py  biscuit_scope.py  workload_keys.py
clayseal/backend/: __init__.py  api_keys.py  attestation.py  audit.py  cache.py  capabilities.py  config.py  db.py  deps.py  errors.py  fingerprints.py  identity.py  main.py  models.py  mtls.py  node_attestor_config.py  node_attestors.py  observability.py  production.py  rate_limit.py  retention.py  schemas.py  secret_encryption.py  signing_keys.py  x509_svid.py
clayseal/backend/routers/: federation.py  identity.py
clayseal/identity/: __init__.py  _capabilities.py  _devattest.py  _http.py  cli.py  client.py  diagnostics.py  errors.py  inspector.py  logging.py  models.py  profile.py  session.py  usability.py  verifier.py  x509.py
clayseal/identity/adapters/: __init__.py  azure.py  base.py  gcp.py  oidc.py  registry.py  spiffe.py  static.py
clayseal/identity/integrations/: __init__.py  agent_tools.py  fastapi.py  mcp.py  mcp_server.py
conformance/: README.md  token_profile.json
deploy/: requirements.in
docs/: AGENT_IDENTITY_PROFILE.md  AGENT_TOOL_BACKLOG.md  CLI.md  CONFORMANCE.md  DEPLOYMENT.md  DEV_GUIDE.md  FEDERATION.md  IDENTITY_PROFILES.md  INTEGRATIONS.md  PRIVACY.md  SECURITY_BACKLOG.md  THREAT_MODEL.md
examples/: 01_quickstart.py  02_capabilities.py  03_federation.py  04_agent_tool_proxy.py  04_mcp_server.py  05_inspect_token.py  common.py  requirements.txt
integrations/: README.md
integrations/hermes/: issue-527-comment.md
integrations/hermes/skills/clayseal-identity/: SKILL.md
integrations/hermes/skills/clayseal-identity/scripts/: identify.py
integrations/openclaw/: README.md
js/clayseal-verify/: README.md  package.json
js/clayseal-verify/examples/: README.md  express-server.mjs  package.json
js/clayseal-verify/src/: index.js
js/clayseal-verify/test/: gen_fixture.py  parity.test.mjs
migrations/: env.py
migrations/versions/: 216f3377adf5_initial_schema.py  a1b2c3d4e5f6_add_x509_ca_keys.py  b7f9d2c4a8e1_add_scoped_tenant_api_keys.py
scripts/: bootstrap.sh  migrate_api_keys.py
sdk/python/tests/: conftest.py  test_agent_tools_integration.py  test_bad_token_zoo.py  test_capabilities.py  test_errors.py  test_identity_adapters.py  test_inspector.py  test_integrations.py  test_logging.py  test_mcp_integration.py  test_profile_cli_integrations.py  test_sdk.py  test_token_attacks.py  test_vendored_core.py
