[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clayseal-identity"
version = "0.5.0"
description = "Clay Seal layer 1 — attested agent identity and Biscuit capability tokens"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
dependencies = [
  "agentauth-core>=0.5,<0.6",
  "httpx>=0.27",
  "biscuit-python>=0.4,<0.5",
  "PyJWT>=2.8,<3.0",
  "cryptography>=42.0",
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "SQLAlchemy>=2.0,<3.0",
  "pydantic>=2.6,<3.0",
  # Production database driver (psycopg v3). SQLite (stdlib) remains the
  # zero-config default for dev/tests; Postgres URLs are pinned to this driver.
  "psycopg[binary]>=3.1,<4.0",
  # Schema migrations (run `alembic upgrade head` as a pre-deploy step).
  "alembic>=1.13,<2.0",
]

[project.urls]
Homepage = "https://github.com/pberlizov/clay-seal-identity"
Documentation = "https://github.com/pberlizov/clay-seal-identity/blob/main/docs/DEV_GUIDE.md"
Repository = "https://github.com/pberlizov/clay-seal-identity"
Issues = "https://github.com/pberlizov/clay-seal-identity/issues"
Changelog = "https://github.com/pberlizov/clay-seal-identity/blob/main/CHANGELOG.md"

[project.scripts]
clayseal-identity = "clayseal.identity.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
# AWS KMS envelope-encryption provider for signing/Biscuit keys at rest
# (CLAYSEAL_SECRET_ENCRYPTION_PROVIDER=aws_kms). boto3 is lazy-imported by
# secret_encryption.AwsKmsProvider, so it is only required when that provider
# is selected — install `clayseal-identity[kms]` (or the umbrella) in prod.
kms = ["boto3>=1.34"]

# Ship only the paths this distribution owns. `clayseal` is this package's own
# top-level namespace — it no longer overlaps the sibling `agentauth.core`
# wheel's namespace, so there is no cross-wheel RECORD collision to avoid.
[tool.hatch.build.targets.wheel]
only-include = [
  "clayseal/identity",
  "clayseal/backend",
  "clayseal/workload_keys.py",
  "clayseal/biscuit_scope.py",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "sdk/python/tests"]
pythonpath = ["."]
