[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clayseal-identity"
version = "0.5.0"
description = "Clay Seal layer 1 — attested agent identity and Biscuit capability tokens"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
# Client SDK (clayseal.identity) runtime deps only — deliberately minimal so
# `pip install clayseal-identity` stays lightweight. The bundled FastAPI identity
# service (clayseal.backend) and its heavy deps live behind the [server] extra.
dependencies = [
  "agentauth-core>=0.5,<0.6",
  "httpx>=0.27",
  "biscuit-python>=0.4,<0.5",
  "PyJWT>=2.8,<3.0",
  "cryptography>=42.0",
]

[project.urls]
Homepage = "https://github.com/pberlizov/clay-seal-identity"
Documentation = "https://github.com/pberlizov/clay-seal-identity/blob/main/docs/DEV_GUIDE.md"
Repository = "https://github.com/pberlizov/clay-seal-identity"
Issues = "https://github.com/pberlizov/clay-seal-identity/issues"
Changelog = "https://github.com/pberlizov/clay-seal-identity/blob/main/CHANGELOG.md"

[project.scripts]
clayseal-identity = "clayseal.identity.cli:main"

[project.optional-dependencies]
# The bundled FastAPI identity service (clayseal.backend). The client SDK does
# NOT need these; install [server] only to run or deploy the issuance/validation
# service. SQLite (stdlib) is the zero-config default; psycopg (v3) is the pinned
# Postgres driver; alembic runs migrations (`alembic upgrade head`) pre-deploy.
server = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "SQLAlchemy>=2.0,<3.0",
  "pydantic>=2.6,<3.0",
  "psycopg[binary]>=3.1,<4.0",
  "alembic>=1.13,<2.0",
]
# AWS KMS envelope-encryption provider for signing/Biscuit keys at rest
# (CLAYSEAL_SECRET_ENCRYPTION_PROVIDER=aws_kms). boto3 is lazy-imported by
# secret_encryption.AwsKmsProvider, so it is only required when that provider
# is selected — install `clayseal-identity[kms]` in prod.
kms = ["boto3>=1.34"]
# Full development environment: client + server + test/lint/type tooling.
dev = [
  "clayseal-identity[server]",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

# Ship only the paths this distribution owns. `clayseal` is this package's own
# top-level namespace — it no longer overlaps the sibling `agentauth.core`
# wheel's namespace, so there is no cross-wheel RECORD collision to avoid.
[tool.hatch.build.targets.wheel]
only-include = [
  "clayseal/identity",
  "clayseal/backend",
  "clayseal/workload_keys.py",
  "clayseal/biscuit_scope.py",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "sdk/python/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
# Line length is advisory here (long strings/URLs in messages); the linter should
# not block on it.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Standalone runnable scripts insert the repo root on sys.path before importing
# the package, so module-level imports intentionally follow that setup.
"scripts/*" = ["E402"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are evaluated once and are safe as
# default arguments (the B008 pattern is idiomatic FastAPI).
extend-immutable-calls = [
  "fastapi.Depends", "fastapi.Header", "fastapi.Query", "fastapi.Path",
  "fastapi.Body", "fastapi.Cookie", "fastapi.Form", "fastapi.File",
]

[tool.mypy]
python_version = "3.10"
files = ["clayseal"]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
# Pragmatic baseline: the codebase is not fully annotated yet, so type-check what
# is annotated without forcing annotations everywhere. Tighten over time.
check_untyped_defs = false
warn_unused_ignores = false
