[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clayseal-identity"
version = "0.6.1"
description = "Clay Seal layer 1 for attested agent identity and Biscuit capability tokens"
readme = "README.md"
license = { text = "MIT" }
# Floor 3.11: matches the CI matrix, and biscuit-python ships no macOS wheel
# for CPython 3.10 (a 3.10 floor would mean a Rust source build on Mac).
requires-python = ">=3.11,<3.14"
# Trove classifiers so PyPI and tooling report the supported interpreters
# (the pypi/pyversions badge reads these, not requires-python).
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
# Client SDK (clayseal.identity) runtime deps only: deliberately minimal so
# `pip install clayseal-identity` stays lightweight. The bundled FastAPI identity
# service (clayseal.backend) and its heavy deps live behind the [server] extra.
dependencies = [
  "httpx>=0.28.1",
  "biscuit-python>=0.4,<0.5",
  "PyJWT>=2.8,<3.0",
  "cryptography>=42.0",
]

[project.urls]
Homepage = "https://github.com/clayseal/clayseal-identity"
Documentation = "https://github.com/clayseal/clayseal-identity/blob/main/docs/DEV_GUIDE.md"
Repository = "https://github.com/clayseal/clayseal-identity"
Issues = "https://github.com/clayseal/clayseal-identity/issues"
Changelog = "https://github.com/clayseal/clayseal-identity/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# The bundled FastAPI identity service (clayseal.backend). The client SDK does
# NOT need these; install [server] only to run or deploy the issuance/validation
# service. SQLite (stdlib) is the zero-config default; psycopg (v3) is the pinned
# Postgres driver; alembic runs migrations (`alembic upgrade head`) pre-deploy.
server = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "SQLAlchemy>=2.0,<3.0",
  "pydantic>=2.6,<3.0",
  "psycopg[binary]>=3.1,<4.0",
  "alembic>=1.18.5,<2.0",
]
# AWS KMS envelope-encryption provider for signing/Biscuit keys at rest
# (CLAYSEAL_SECRET_ENCRYPTION_PROVIDER=aws_kms). boto3 is lazy-imported by
# secret_encryption.AwsKmsProvider, so it is only required when that provider
# is selected: install `clayseal-identity[kms]` in prod.
kms = ["boto3>=1.43.45"]
# Server-side MCP authorization (clayseal.identity.integrations.mcp_server):
# plug ClaySealTokenVerifier + ToolGuard into an official-SDK FastMCP server.
mcp = ["mcp>=1.28.1"]
# Full development environment: client + server + test/lint/type tooling.
dev = [
  "clayseal-identity[server,mcp]",
  "pytest>=8.0",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

# Ship only the paths this distribution owns; `clayseal` is this package's own
# top-level namespace.
[tool.hatch.build.targets.wheel]
only-include = [
  "clayseal/identity",
  "clayseal/backend",
  "clayseal/_core.py",
  "clayseal/workload_keys.py",
  "clayseal/biscuit_scope.py",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "sdk/python/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
# Line length is advisory here (long strings/URLs in messages); the linter should
# not block on it.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Standalone runnable scripts insert the repo root on sys.path before importing
# the package, so module-level imports intentionally follow that setup.
"scripts/*" = ["E402"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are evaluated once and are safe as
# default arguments (the B008 pattern is idiomatic FastAPI).
extend-immutable-calls = [
  "fastapi.Depends", "fastapi.Header", "fastapi.Query", "fastapi.Path",
  "fastapi.Body", "fastapi.Cookie", "fastapi.Form", "fastapi.File",
]

[tool.mypy]
python_version = "3.11"
files = ["clayseal"]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
# Pragmatic baseline: the codebase is not fully annotated yet, so type-check what
# is annotated without forcing annotations everywhere. Tighten over time.
check_untyped_defs = false
warn_unused_ignores = false
